--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
+        "jquery-ui": "^1.12.1",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
@@ -23,5 +24,8 @@
         "sass": "^1.32.12",
         "sass-loader": "^11.0.1",
         "url-loader": "^4.1.1"
+    },
+    "dependencies": {
+        "jquery-datetimepicker": "^2.5.21"
     }
 }
