--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
-        "jquery-ui": "^1.12.1",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
@@ -26,6 +25,6 @@
         "url-loader": "^4.1.1"
     },
     "dependencies": {
-        "jquery-datetimepicker": "^2.5.21"
+        "select2": "^4.0.13"
     }
 }
